feat: handle loader on lazy loading

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -1,5 +1,5 @@
 {
-  "UNAUTHORIZED_INFO": "Musisz się zalogować aby przejść dalej...",
+  "UNAUTHORIZED_INFO": "Musisz się zalogować, aby przejść dalej...",
   "BUTTON": {
     "LOGIN": "Zaloguj"
   }
