feat: changes in title service
- handle translate title
- add APP_NAME const

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -1,5 +1,8 @@
 {
   "UNAUTHORIZED_INFO": "Musisz się zalogować, aby przejść dalej...",
+  "TITLE": {
+    "UNAUTHORIZED": "Nieautoryzowany"
+  },
   "BUTTON": {
     "LOGIN": "Zaloguj"
   }
