--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -16,15 +16,16 @@
     "PASSWORD_TOOLTIP": "Wpisz swoje hasło"
   },
   "AUTH": {
-    "HEADER": "{{appName}} - rekrutacje",
     "REGISTER": "Zarejestruj się",
     "REGISTER_INFO": "Nie masz konta?",
     "LOGIN": "Zaloguj się",
     "LOGIN_INFO": "Masz już konto?",
     "SIGN_IN": {
+      "HEADER": "{{appName}} - Logowanie",
       "SUBHEADER": "Zaloguj się aby przejść dalej..."
     },
     "SIGN_UP": {
+      "HEADER": "{{appName}} - Rejestracja",
       "SUBHEADER": "Zarejestruj się aby przejść dalej..."
     }
   }
