fix: move form signup to separate component

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -7,7 +7,9 @@
   },
   "BUTTON": {
     "LOGIN": "Zaloguj",
-    "REGISTER": "Zarejestruj"
+    "REGISTER": "Zarejestruj",
+    "BACKWARD": "Cofnij",
+    "NEXT": "Dalej"
   },
   "FORM": {
     "EMAIL": "Email",
