--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -38,6 +38,17 @@
       "COMMONS": "Podstawowe",
       "DETAILS": "Szczegółowe",
       "CONSENTS": "Zgody"
+    },
+    "STORE": {
+      "LOGIN_SUMMARY": "Logowanie",
+      "LOGOUT_SUMMARY": "Wylogowywanie",
+      "SUCCESS_MES": {
+        "LOGIN_DETAIL": "Zalogowano pomyślnie",
+        "LOGOUT_DETAIL": "Wylogowano pomyślnie pomyślnie"
+      },
+      "ERROR_MES": {
+        "LOGIN_DETAIL": "Nie udało się zalogować"
+      }
     }
   }
 }
