feat: implement user actions in header

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -10,7 +10,8 @@
     "LOGOUT": "Wyloguj",
     "REGISTER": "Zarejestruj",
     "BACKWARD": "Cofnij",
-    "NEXT": "Dalej"
+    "NEXT": "Dalej",
+    "PROFILE": "Profil"
   },
   "FORM": {
     "EMAIL": "Email",
