feat: implement breadcrumbs

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -3,7 +3,8 @@
   "TITLE": {
     "UNAUTHORIZED": "Nieautoryzowany",
     "SIGN_IN": "Logowanie",
-    "SIGN_UP": "Rejestracja"
+    "SIGN_UP": "Rejestracja",
+    "DASHBOARD": "Główny panel"
   },
   "BUTTON": {
     "LOGIN": "Zaloguj",
