fix: create creators component

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -4,7 +4,8 @@
     "UNAUTHORIZED": "Nieautoryzowany",
     "SIGN_IN": "Logowanie",
     "SIGN_UP": "Rejestracja",
-    "DASHBOARD": "Główny panel"
+    "DASHBOARD": "Główny panel",
+    "CREATORS": "Kreatory"
   },
   "BUTTON": {
     "LOGIN": "Zaloguj",
