fix: create question BE service

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -5,7 +5,8 @@
     "SIGN_IN": "Logowanie",
     "SIGN_UP": "Rejestracja",
     "DASHBOARD": "Główny panel",
-    "CREATORS": "Kreatory"
+    "CREATORS": "Kreatory",
+    "QUESTION_ADD": "Dodaj pytanie"
   },
   "BREADCRUMB": {
     "CREATORS": "Kreatory",
