--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -6,11 +6,13 @@
     "SIGN_UP": "Rejestracja",
     "DASHBOARD": "Główny panel",
     "CREATORS": "Kreatory",
-    "QUESTION_ADD": "Dodaj pytanie"
+    "QUESTION_ADD": "Dodaj pytanie",
+    "EXAM_ADD": "Dodaj egzamin"
   },
   "BREADCRUMB": {
     "CREATORS": "Kreatory",
-    "QUESTION": "Pytanie"
+    "QUESTION": "Pytanie",
+    "EXAM": "Egzamin"
   },
   "MENU": {
     "CREATORS": "Kreatory",
@@ -32,6 +34,7 @@
     "QUESTION": "Pytanie",
     "QUESTION_CLOSE": "Pytanie zamknięte",
     "QUESTION_OPEN": "Pytanie otwarte",
+    "EXAM": "Egzamin",
     "SAVE": "Zapisz",
     "CANCEL": "Anuluj"
   },
