feat: custom question detail item

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -106,8 +106,10 @@
         "QUESTION_LIST": "Nie udało sie pobrac listy pytań"
       }
     }
-  },"EXAM":{
-  "ACCEPT_MIN": "Musisz wybrać minimum 1 pytanie zamknięte lub otwarte",
+  },
+  "EXAM":{
+    "ACCEPT_MIN": "Musisz wybrać minimum 1 pytanie zamknięte lub otwarte",
+    "ALREADY_ADDED_QUESTION": "Dodano już te pytanie do egzaminu",
     "STORE": {
       "EXAM_SUMMARY": "Egzamin",
       "SUCCESS_MES": {
