--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -58,7 +58,8 @@
     "SELECT_QUESTIONS_OPEN": "({{count}}) Wybierz pytania otwarte",
     "SELECT_QUESTIONS_CLOSE": "({{count}}) Wybierz pytania zamknięte",
     "SEARCH_QUESTION_OPEN": "Wyszukaj pytanie otwarte po nazwie",
-    "SEARCH_QUESTION_CLOSE": "Wyszukaj pytanie zamknięte po nazwie"
+    "SEARCH_QUESTION_CLOSE": "Wyszukaj pytanie zamknięte po nazwie",
+    "ANSWERS": "Odpowiedzi"
   },
   "AUTH": {
     "REGISTER": "Zarejestruj się",
