--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -40,15 +40,13 @@
     "SAVE": "Zapisz",
     "CANCEL": "Anuluj"
   },
-  "LIST": {
-    "TOTAL": "Wyników: {{quantity}}",
-    "COLUMN": {
-      "FIRST_NAME": "Imię",
-      "LAST_NAME": "Nazwisko",
-      "EMAIL": "Email",
-      "CREATE_AT": "Data utworzenia",
-      "UPDATED_AT": "Data modyfikacji"
-    }
+  "FIELD": {
+    "FIRST_NAME": "Imię",
+    "LAST_NAME": "Nazwisko",
+    "EMAIL": "Email",
+    "CREATE_AT": "Data utworzenia",
+    "UPDATED_AT": "Data modyfikacji",
+    "PHONE": "Nr telefonu"
   },
   "ERROR": {
     "FORM": {
@@ -111,7 +109,7 @@
       }
     }
   },
-  "QUESTIONS":{
+  "QUESTIONS": {
     "MESSAGE": {
       "CLOSE_QUESTION_NOT_SELECTED": "Brak wybranych pytań zamkniętych",
       "OPEN_QUESTION_NOT_SELECTED": "Brak wybranych pytań otwartych"
@@ -128,7 +126,7 @@
       }
     }
   },
-  "EXAM":{
+  "EXAM": {
     "ACCEPT_MIN": "Musisz wybrać minimum 1 pytanie zamknięte lub otwarte",
     "ALREADY_ADDED_QUESTION": "Dodano już te pytanie do egzaminu",
     "STORE": {
@@ -141,7 +139,7 @@
       }
     }
   },
-  "USERS":{
+  "USERS": {
     "CANDIDATES_LIST_HEADING": "Lista kandydatów",
     "STORE": {
       "CANDIDATES_SUMMARY": "Kandydaci",
