feat: generate and connect employees component

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -8,13 +8,17 @@
     "CREATORS": "Kreatory",
     "QUESTION_ADD": "Dodaj pytanie",
     "EXAM_ADD": "Dodaj egzamin",
-    "CANDIDATES": "Kandydaci"
+    "USERS": "Użytkownicy",
+    "CANDIDATES": "Kandydaci",
+    "EMPLOYEES": "Pracownicy"
   },
   "BREADCRUMB": {
     "CREATORS": "Kreatory",
     "QUESTION": "Pytanie",
     "EXAM": "Egzamin",
-    "CANDIDATES": "Kandydaci"
+    "USERS": "Użytkownicy",
+    "CANDIDATES": "Kandydaci",
+    "EMPLOYEES": "Pracownicy"
   },
   "MENU": {
     "CREATORS": "Kreatory",
