feat: add employee btn

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -147,6 +147,7 @@
   "USERS": {
     "CANDIDATES_LIST_HEADING": "Lista kandydatów",
     "EMPLOYEES_LIST_HEADING": "Lista pracowników",
+    "ADD_EMPLOYEE": "Dodaj pracownika",
     "STORE": {
       "CANDIDATES_SUMMARY": "Kandydaci",
       "ERROR_MES": {
